--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="/favicon.webp" type="image/x-icon">
     <link rel="stylesheet" href="./src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Multimovies</title>
+    <title>Movieo.Web</title>
   </head>
   <body>
     <div id="root"></div>
